mdbx-sys/libmdbx/mdbx.h

typedef unsigned short mdbx_mode_t;
typedef mode_t mdbx_mode_t;
typedef HANDLE mdbx_filehandle_t;
typedef DWORD mdbx_pid_t;
typedef DWORD mdbx_tid_t;
typedef int mdbx_filehandle_t;
typedef pid_t mdbx_pid_t;
typedef pthread_t mdbx_tid_t;
typedef mode_t mdbx_mode_t;
#define MDBX_VERSION_MAJOR 0
#define MDBX_VERSION_MINOR 12
extern LIBMDBX_VERINFO_API const struct MDBX_version_info {
  uint8_t major;     
  uint8_t minor;     
  uint16_t release;  
  uint32_t revision; 
  struct {
    const char *datetime; 
    const char *tree;     
    const char *commit;   
    const char *describe; 
  } git;                  
  const char *sourcery;   
}  mdbx_version;
extern LIBMDBX_VERINFO_API const struct MDBX_build_info {
  const char *datetime; 
  const char *target;   
  const char *options;  
  const char *compiler; 
  const char *flags;    
}  mdbx_build;
typedef struct MDBX_env MDBX_env;
struct MDBX_env;
typedef struct MDBX_txn MDBX_txn;
struct MDBX_txn;
typedef uint32_t MDBX_dbi;
typedef struct MDBX_cursor MDBX_cursor;
struct MDBX_cursor;
struct iovec {
  void *iov_base; 
  size_t iov_len; 
};
struct MDBX_val {
  void *iov_base; 
  size_t iov_len; 
};
typedef struct MDBX_val MDBX_val;
typedef struct iovec MDBX_val;
enum MDBX_constants {
  MDBX_MAX_DBI = UINT32_C(32765),
  MDBX_MAXDATASIZE = UINT32_C(0x7fff0000),
  MDBX_MIN_PAGESIZE = 256,
  MDBX_MAX_PAGESIZE = 65536,
};
#define MDBX_LOCKNAME "/mdbx.lck"
#define MDBX_LOCKNAME MDBX_LOCKNAME_W
#define MDBX_LOCKNAME MDBX_LOCKNAME_A
#define MDBX_DATANAME "/mdbx.dat"
#define MDBX_DATANAME MDBX_DATANAME_W
#define MDBX_DATANAME MDBX_DATANAME_A
#define MDBX_LOCK_SUFFIX "-lck"
#define MDBX_LOCK_SUFFIX MDBX_LOCK_SUFFIX_W
#define MDBX_LOCK_SUFFIX MDBX_LOCK_SUFFIX_A
enum MDBX_log_level_t {
  MDBX_LOG_FATAL = 0,
  MDBX_LOG_ERROR = 1,
  MDBX_LOG_WARN = 2,
  MDBX_LOG_NOTICE = 3,
  MDBX_LOG_VERBOSE = 4,
  MDBX_LOG_DEBUG = 5,
  MDBX_LOG_TRACE = 6,
  MDBX_LOG_EXTRA = 7,
#ifdef ENABLE_UBSAN
  MDBX_LOG_MAX = 7 ,
#endif 
  MDBX_LOG_DONTCHANGE = -1
};
typedef enum MDBX_log_level_t MDBX_log_level_t;
enum MDBX_debug_flags_t {
  MDBX_DBG_NONE = 0,
  MDBX_DBG_ASSERT = 1,
  MDBX_DBG_AUDIT = 2,
  MDBX_DBG_JITTER = 4,
  MDBX_DBG_DUMP = 8,
  MDBX_DBG_LEGACY_MULTIOPEN = 16,
  MDBX_DBG_LEGACY_OVERLAP = 32,
  MDBX_DBG_DONT_UPGRADE = 64,
#ifdef ENABLE_UBSAN
  MDBX_DBG_MAX = ((unsigned)MDBX_LOG_MAX) << 16 |
                 127 ,
#endif 
  MDBX_DBG_DONTCHANGE = -1
};
typedef enum MDBX_debug_flags_t MDBX_debug_flags_t;
typedef void MDBX_debug_func(MDBX_log_level_t loglevel, const char *function,
                             int line, const char *fmt,
                             va_list args) MDBX_CXX17_NOEXCEPT;
LIBMDBX_API int mdbx_setup_debug(MDBX_log_level_t log_level,
                                 MDBX_debug_flags_t debug_flags,
                                 MDBX_debug_func *logger);
typedef void MDBX_assert_func(const MDBX_env *env, const char *msg,
                              const char *function,
                              unsigned line) MDBX_CXX17_NOEXCEPT;
LIBMDBX_API int mdbx_env_set_assert(MDBX_env *env, MDBX_assert_func *func);
LIBMDBX_API const char *mdbx_dump_val(const MDBX_val *key, char *const buf,
                                      const size_t bufsize);
MDBX_NORETURN LIBMDBX_API void mdbx_panic(const char *fmt, ...)
    MDBX_PRINTF_ARGS(1, 2);
enum MDBX_env_flags_t {
  MDBX_ENV_DEFAULTS = 0,
  MDBX_VALIDATION = UINT32_C(0x00002000),
  MDBX_NOSUBDIR = UINT32_C(0x4000),
  MDBX_RDONLY = UINT32_C(0x20000),
  MDBX_EXCLUSIVE = UINT32_C(0x400000),
  MDBX_ACCEDE = UINT32_C(0x40000000),
  MDBX_WRITEMAP = UINT32_C(0x80000),
  MDBX_NOTLS = UINT32_C(0x200000),
  MDBX_NORDAHEAD = UINT32_C(0x800000),
  MDBX_NOMEMINIT = UINT32_C(0x1000000),
  MDBX_COALESCE = UINT32_C(0x2000000),
  MDBX_LIFORECLAIM = UINT32_C(0x4000000),
  MDBX_PAGEPERTURB = UINT32_C(0x8000000),
  MDBX_SYNC_DURABLE = 0,
  MDBX_NOMETASYNC = UINT32_C(0x40000),
  MDBX_SAFE_NOSYNC = UINT32_C(0x10000),
  MDBX_MAPASYNC = MDBX_SAFE_NOSYNC,
  MDBX_UTTERLY_NOSYNC = MDBX_SAFE_NOSYNC | UINT32_C(0x100000),
};
typedef enum MDBX_env_flags_t MDBX_env_flags_t;
enum MDBX_txn_flags_t {
  MDBX_TXN_READWRITE = 0,
  MDBX_TXN_RDONLY = MDBX_RDONLY,
#if CONSTEXPR_ENUM_FLAGS_OPERATIONS || defined(DOXYGEN)
  MDBX_TXN_RDONLY_PREPARE = MDBX_RDONLY | MDBX_NOMEMINIT,
#else
  MDBX_TXN_RDONLY_PREPARE = uint32_t(MDBX_RDONLY) | uint32_t(MDBX_NOMEMINIT),
#endif
  MDBX_TXN_TRY = UINT32_C(0x10000000),
  MDBX_TXN_NOMETASYNC = MDBX_NOMETASYNC,
  MDBX_TXN_NOSYNC = MDBX_SAFE_NOSYNC,
  MDBX_TXN_INVALID = INT32_MIN,
  MDBX_TXN_FINISHED = 0x01,
  MDBX_TXN_ERROR = 0x02,
  MDBX_TXN_DIRTY = 0x04,
  MDBX_TXN_SPILLS = 0x08,
  MDBX_TXN_HAS_CHILD = 0x10,
  MDBX_TXN_BLOCKED = MDBX_TXN_FINISHED | MDBX_TXN_ERROR | MDBX_TXN_HAS_CHILD
};
typedef enum MDBX_txn_flags_t MDBX_txn_flags_t;
enum MDBX_db_flags_t {
  MDBX_DB_DEFAULTS = 0,
  MDBX_REVERSEKEY = UINT32_C(0x02),
  MDBX_DUPSORT = UINT32_C(0x04),
  MDBX_INTEGERKEY = UINT32_C(0x08),
  MDBX_DUPFIXED = UINT32_C(0x10),
  MDBX_INTEGERDUP = UINT32_C(0x20),
  MDBX_REVERSEDUP = UINT32_C(0x40),
  MDBX_CREATE = UINT32_C(0x40000),
  MDBX_DB_ACCEDE = MDBX_ACCEDE
};
typedef enum MDBX_db_flags_t MDBX_db_flags_t;
enum MDBX_put_flags_t {
  MDBX_UPSERT = 0,
  MDBX_NOOVERWRITE = UINT32_C(0x10),
  MDBX_NODUPDATA = UINT32_C(0x20),
  MDBX_CURRENT = UINT32_C(0x40),
  MDBX_ALLDUPS = UINT32_C(0x80),
  MDBX_RESERVE = UINT32_C(0x10000),
  MDBX_APPEND = UINT32_C(0x20000),
  MDBX_APPENDDUP = UINT32_C(0x40000),
  MDBX_MULTIPLE = UINT32_C(0x80000)
};
typedef enum MDBX_put_flags_t MDBX_put_flags_t;
enum MDBX_copy_flags_t {
  MDBX_CP_DEFAULTS = 0,
  MDBX_CP_COMPACT = 1u,
  MDBX_CP_FORCE_DYNAMIC_SIZE = 2u
};
typedef enum MDBX_copy_flags_t MDBX_copy_flags_t;
enum MDBX_cursor_op {
  MDBX_FIRST,
  MDBX_FIRST_DUP,
  MDBX_GET_BOTH,
  MDBX_GET_BOTH_RANGE,
  MDBX_GET_CURRENT,
  MDBX_GET_MULTIPLE,
  MDBX_LAST,
  MDBX_LAST_DUP,
  MDBX_NEXT,
  MDBX_NEXT_DUP,
  MDBX_NEXT_MULTIPLE,
  MDBX_NEXT_NODUP,
  MDBX_PREV,
  MDBX_PREV_DUP,
  MDBX_PREV_NODUP,
  MDBX_SET,
  MDBX_SET_KEY,
  MDBX_SET_RANGE,
  MDBX_PREV_MULTIPLE,
  MDBX_SET_LOWERBOUND,
  MDBX_SET_UPPERBOUND
};
typedef enum MDBX_cursor_op MDBX_cursor_op;
enum MDBX_error_t {
  MDBX_SUCCESS = 0,
  MDBX_RESULT_FALSE = MDBX_SUCCESS,
  MDBX_RESULT_TRUE = -1,
  MDBX_KEYEXIST = -30799,
  MDBX_FIRST_LMDB_ERRCODE = MDBX_KEYEXIST,
  MDBX_NOTFOUND = -30798,
  MDBX_PAGE_NOTFOUND = -30797,
  MDBX_CORRUPTED = -30796,
  MDBX_PANIC = -30795,
  MDBX_VERSION_MISMATCH = -30794,
  MDBX_INVALID = -30793,
  MDBX_MAP_FULL = -30792,
  MDBX_DBS_FULL = -30791,
  MDBX_READERS_FULL = -30790,
  MDBX_TXN_FULL = -30788,
  MDBX_CURSOR_FULL = -30787,
  MDBX_PAGE_FULL = -30786,
  MDBX_UNABLE_EXTEND_MAPSIZE = -30785,
  MDBX_INCOMPATIBLE = -30784,
  MDBX_BAD_RSLOT = -30783,
  MDBX_BAD_TXN = -30782,
  MDBX_BAD_VALSIZE = -30781,
  MDBX_BAD_DBI = -30780,
  MDBX_PROBLEM = -30779,
  MDBX_LAST_LMDB_ERRCODE = MDBX_PROBLEM,
  MDBX_BUSY = -30778,
  MDBX_FIRST_ADDED_ERRCODE = MDBX_BUSY,
  MDBX_EMULTIVAL = -30421,
  MDBX_EBADSIGN = -30420,
  MDBX_WANNA_RECOVERY = -30419,
  MDBX_EKEYMISMATCH = -30418,
  MDBX_TOO_LARGE = -30417,
  MDBX_THREAD_MISMATCH = -30416,
  MDBX_TXN_OVERLAPPING = -30415,
  MDBX_BACKLOG_DEPLETED = -30414,
  MDBX_DUPLICATED_CLK = -30413,
  MDBX_LAST_ADDED_ERRCODE = MDBX_DUPLICATED_CLK,
#if defined(_WIN32) || defined(_WIN64)
  MDBX_ENODATA = ERROR_HANDLE_EOF,
  MDBX_EINVAL = ERROR_INVALID_PARAMETER,
  MDBX_EACCESS = ERROR_ACCESS_DENIED,
  MDBX_ENOMEM = ERROR_OUTOFMEMORY,
  MDBX_EROFS = ERROR_FILE_READ_ONLY,
  MDBX_ENOSYS = ERROR_NOT_SUPPORTED,
  MDBX_EIO = ERROR_WRITE_FAULT,
  MDBX_EPERM = ERROR_INVALID_FUNCTION,
  MDBX_EINTR = ERROR_CANCELLED,
  MDBX_ENOFILE = ERROR_FILE_NOT_FOUND,
  MDBX_EREMOTE = ERROR_REMOTE_STORAGE_MEDIA_ERROR
#else 
#ifdef ENODATA
  MDBX_ENODATA = ENODATA,
#else
  MDBX_ENODATA = 9919 ,
#endif 
  MDBX_EINVAL = EINVAL,
  MDBX_EACCESS = EACCES,
  MDBX_ENOMEM = ENOMEM,
  MDBX_EROFS = EROFS,
  MDBX_ENOSYS = ENOSYS,
  MDBX_EIO = EIO,
  MDBX_EPERM = EPERM,
  MDBX_EINTR = EINTR,
  MDBX_ENOFILE = ENOENT,
  MDBX_EREMOTE = ENOTBLK
#endif 
};
typedef enum MDBX_error_t MDBX_error_t;
LIBMDBX_API const char *mdbx_strerror(int errnum);
LIBMDBX_API const char *mdbx_strerror_r(int errnum, char *buf, size_t buflen);
MDBX_NOTHROW_PURE_FUNCTION LIBMDBX_API const char *mdbx_liberr2str(int errnum);
LIBMDBX_API int mdbx_env_create(MDBX_env **penv);
LIBMDBX_API int mdbx_env_open(MDBX_env *env, const char *pathname,
                              MDBX_env_flags_t flags, mdbx_mode_t mode);
enum MDBX_env_delete_mode_t {
  MDBX_ENV_JUST_DELETE = 0,
  MDBX_ENV_ENSURE_UNUSED = 1,
  MDBX_ENV_WAIT_FOR_UNUSED = 2,
};
typedef enum MDBX_env_delete_mode_t MDBX_env_delete_mode_t;
LIBMDBX_API int mdbx_env_delete(const char *pathname,
                                MDBX_env_delete_mode_t mode);
LIBMDBX_API int mdbx_env_copy(MDBX_env *env, const char *dest,
                              MDBX_copy_flags_t flags);
LIBMDBX_API int mdbx_env_copy2fd(MDBX_env *env, mdbx_filehandle_t fd,
                                 MDBX_copy_flags_t flags);
struct MDBX_stat {
  uint32_t ms_psize; 
  uint32_t ms_depth; 
  uint64_t ms_branch_pages;   
  uint64_t ms_leaf_pages;     
  uint64_t ms_overflow_pages; 
  uint64_t ms_entries;        
  uint64_t ms_mod_txnid; 
};
typedef struct MDBX_stat MDBX_stat;
LIBMDBX_API int mdbx_env_stat_ex(const MDBX_env *env, const MDBX_txn *txn,
                                 MDBX_stat *stat, size_t bytes);
typedef int(MDBX_cmp_func)(const MDBX_val *a,
                           const MDBX_val *b) MDBX_CXX17_NOEXCEPT;
typedef int(MDBX_reader_list_func)(void *ctx, int num, int slot, mdbx_pid_t pid,
                                   mdbx_tid_t thread, uint64_t txnid,
                                   uint64_t lag, size_t bytes_used,
                                   size_t bytes_retained) MDBX_CXX17_NOEXCEPT;
typedef int(MDBX_hsr_func)(const MDBX_env *env, const MDBX_txn *txn,
                           mdbx_pid_t pid, mdbx_tid_t tid, uint64_t laggard,
                           unsigned gap, size_t space,
                           int retry) MDBX_CXX17_NOEXCEPT;