mdbx-sys/src/bindings.rs

pub const MDBX_VERSION_MAJOR: ::libc::c_uint = 0;
pub const MDBX_VERSION_MINOR: ::libc::c_uint = 9;
pub const MDBX_LOCKNAME: &'static [u8; 10usize] = b"/mdbx.lck\0";
pub const MDBX_DATANAME: &'static [u8; 10usize] = b"/mdbx.dat\0";
pub const MDBX_LOCK_SUFFIX: &'static [u8; 5usize] = b"-lck\0";
pub type va_list = __builtin_va_list;
pub type __uint16_t = ::libc::c_ushort;
pub type __int32_t = ::libc::c_int;
pub type __darwin_intptr_t = ::libc::c_long;
pub type __darwin_mode_t = __uint16_t;
pub type __darwin_pid_t = __int32_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __darwin_pthread_handler_rec {
    pub __routine: ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::libc::c_void)>,
    pub __arg: *mut ::libc::c_void,
    pub __next: *mut __darwin_pthread_handler_rec,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct _opaque_pthread_t {
    pub __sig: ::libc::c_long,
    pub __cleanup_stack: *mut __darwin_pthread_handler_rec,
    pub __opaque: [::libc::c_char; 8176usize],
}
pub type __darwin_pthread_t = *mut _opaque_pthread_t;
pub type pthread_t = __darwin_pthread_t;
pub type pid_t = __darwin_pid_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct iovec {
    pub iov_base: *mut ::libc::c_void,
    pub iov_len: usize,
}
pub type mdbx_pid_t = pid_t;
pub type mdbx_tid_t = pthread_t;
pub type mdbx_mode_t = mode_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MDBX_version_info {
    pub major: u8,
    pub minor: u8,
    pub release: u16,
    pub revision: u32,
    pub git: MDBX_version_info__bindgen_ty_1,
    pub sourcery: *const ::libc::c_char,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MDBX_version_info__bindgen_ty_1 {
    pub datetime: *const ::libc::c_char,
    pub tree: *const ::libc::c_char,
    pub commit: *const ::libc::c_char,
    pub describe: *const ::libc::c_char,
}
extern "C" {
    pub static mdbx_version: MDBX_version_info;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MDBX_build_info {
    pub datetime: *const ::libc::c_char,
    pub target: *const ::libc::c_char,
    pub options: *const ::libc::c_char,
    pub compiler: *const ::libc::c_char,
    pub flags: *const ::libc::c_char,
}
extern "C" {
    pub static mdbx_build: MDBX_build_info;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MDBX_env {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MDBX_txn {
    _unused: [u8; 0],
}
pub type MDBX_dbi = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MDBX_cursor {
    _unused: [u8; 0],
}
pub type MDBX_val = iovec;
pub const MDBX_MAX_DBI: MDBX_constants = 32765;
pub const MDBX_MAXDATASIZE: MDBX_constants = 2147418112;
pub const MDBX_MIN_PAGESIZE: MDBX_constants = 256;
pub const MDBX_MAX_PAGESIZE: MDBX_constants = 65536;
pub type MDBX_constants = ::libc::c_uint;
pub const MDBX_LOG_FATAL: MDBX_log_level_t = 0;
pub const MDBX_LOG_ERROR: MDBX_log_level_t = 1;
pub const MDBX_LOG_WARN: MDBX_log_level_t = 2;
pub const MDBX_LOG_NOTICE: MDBX_log_level_t = 3;
pub const MDBX_LOG_VERBOSE: MDBX_log_level_t = 4;
pub const MDBX_LOG_DEBUG: MDBX_log_level_t = 5;
pub const MDBX_LOG_TRACE: MDBX_log_level_t = 6;
pub const MDBX_LOG_EXTRA: MDBX_log_level_t = 7;
pub const MDBX_LOG_DONTCHANGE: MDBX_log_level_t = -1;
pub type MDBX_log_level_t = ::libc::c_int;
pub const MDBX_DBG_ASSERT: MDBX_debug_flags_t = 1;
pub const MDBX_DBG_AUDIT: MDBX_debug_flags_t = 2;
pub const MDBX_DBG_JITTER: MDBX_debug_flags_t = 4;
pub const MDBX_DBG_DUMP: MDBX_debug_flags_t = 8;
pub const MDBX_DBG_LEGACY_MULTIOPEN: MDBX_debug_flags_t = 16;
pub const MDBX_DBG_LEGACY_OVERLAP: MDBX_debug_flags_t = 32;
pub const MDBX_DBG_DONTCHANGE: MDBX_debug_flags_t = -1;
pub type MDBX_debug_flags_t = ::libc::c_int;
pub type MDBX_debug_func = ::std::option::Option<
    unsafe extern "C" fn(
        loglevel: MDBX_log_level_t,
        function: *const ::libc::c_char,
        line: ::libc::c_int,
        msg: *const ::libc::c_char,
        args: *mut __va_list_tag,
    ),
>;
extern "C" {
    pub fn mdbx_setup_debug(
        log_level: MDBX_log_level_t,
        debug_flags: MDBX_debug_flags_t,
        logger: MDBX_debug_func,
    ) -> ::libc::c_int;
}
pub type MDBX_assert_func = ::std::option::Option<
    unsafe extern "C" fn(
        env: *const MDBX_env,
        msg: *const ::libc::c_char,
        function: *const ::libc::c_char,
        line: ::libc::c_uint,
    ),
>;
extern "C" {
    pub fn mdbx_env_set_assert(env: *mut MDBX_env, func: MDBX_assert_func) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_dump_val(
        key: *const MDBX_val,
        buf: *mut ::libc::c_char,
        bufsize: usize,
    ) -> *const ::libc::c_char;
}
extern "C" {
    pub fn mdbx_panic(fmt: *const ::libc::c_char, ...);
}
pub const MDBX_ENV_DEFAULTS: MDBX_env_flags_t = 0;
pub const MDBX_NOSUBDIR: MDBX_env_flags_t = 16384;
pub const MDBX_RDONLY: MDBX_env_flags_t = 131072;
pub const MDBX_EXCLUSIVE: MDBX_env_flags_t = 4194304;
pub const MDBX_ACCEDE: MDBX_env_flags_t = 1073741824;
pub const MDBX_WRITEMAP: MDBX_env_flags_t = 524288;
pub const MDBX_NOTLS: MDBX_env_flags_t = 2097152;
pub const MDBX_NORDAHEAD: MDBX_env_flags_t = 8388608;
pub const MDBX_NOMEMINIT: MDBX_env_flags_t = 16777216;
pub const MDBX_COALESCE: MDBX_env_flags_t = 33554432;
pub const MDBX_LIFORECLAIM: MDBX_env_flags_t = 67108864;
pub const MDBX_PAGEPERTURB: MDBX_env_flags_t = 134217728;
pub const MDBX_SYNC_DURABLE: MDBX_env_flags_t = 0;
pub const MDBX_NOMETASYNC: MDBX_env_flags_t = 262144;
pub const MDBX_SAFE_NOSYNC: MDBX_env_flags_t = 65536;
pub const MDBX_MAPASYNC: MDBX_env_flags_t = 65536;
pub const MDBX_UTTERLY_NOSYNC: MDBX_env_flags_t = 1114112;
pub type MDBX_env_flags_t = ::libc::c_uint;
pub const MDBX_TXN_READWRITE: MDBX_txn_flags_t = 0;
pub const MDBX_TXN_RDONLY: MDBX_txn_flags_t = 131072;
pub const MDBX_TXN_RDONLY_PREPARE: MDBX_txn_flags_t = 16908288;
pub const MDBX_TXN_TRY: MDBX_txn_flags_t = 268435456;
pub const MDBX_TXN_NOMETASYNC: MDBX_txn_flags_t = 262144;
pub const MDBX_TXN_NOSYNC: MDBX_txn_flags_t = 65536;
pub type MDBX_txn_flags_t = ::libc::c_uint;
pub const MDBX_DB_DEFAULTS: MDBX_db_flags_t = 0;
pub const MDBX_REVERSEKEY: MDBX_db_flags_t = 2;
pub const MDBX_DUPSORT: MDBX_db_flags_t = 4;
pub const MDBX_INTEGERKEY: MDBX_db_flags_t = 8;
pub const MDBX_DUPFIXED: MDBX_db_flags_t = 16;
pub const MDBX_INTEGERDUP: MDBX_db_flags_t = 32;
pub const MDBX_REVERSEDUP: MDBX_db_flags_t = 64;
pub const MDBX_CREATE: MDBX_db_flags_t = 262144;
pub const MDBX_DB_ACCEDE: MDBX_db_flags_t = 1073741824;
pub type MDBX_db_flags_t = ::libc::c_uint;
pub const MDBX_UPSERT: MDBX_put_flags_t = 0;
pub const MDBX_NOOVERWRITE: MDBX_put_flags_t = 16;
pub const MDBX_NODUPDATA: MDBX_put_flags_t = 32;
pub const MDBX_CURRENT: MDBX_put_flags_t = 64;
pub const MDBX_ALLDUPS: MDBX_put_flags_t = 128;
pub const MDBX_RESERVE: MDBX_put_flags_t = 65536;
pub const MDBX_APPEND: MDBX_put_flags_t = 131072;
pub const MDBX_APPENDDUP: MDBX_put_flags_t = 262144;
pub const MDBX_MULTIPLE: MDBX_put_flags_t = 524288;
pub type MDBX_put_flags_t = ::libc::c_uint;
pub const MDBX_CP_DEFAULTS: MDBX_copy_flags_t = 0;
pub const MDBX_CP_COMPACT: MDBX_copy_flags_t = 1;
pub const MDBX_CP_FORCE_DYNAMIC_SIZE: MDBX_copy_flags_t = 2;
pub type MDBX_copy_flags_t = ::libc::c_uint;
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum MDBX_cursor_op {
    MDBX_FIRST = 0,
    MDBX_FIRST_DUP = 1,
    MDBX_GET_BOTH = 2,
    MDBX_GET_BOTH_RANGE = 3,
    MDBX_GET_CURRENT = 4,
    MDBX_GET_MULTIPLE = 5,
    MDBX_LAST = 6,
    MDBX_LAST_DUP = 7,
    MDBX_NEXT = 8,
    MDBX_NEXT_DUP = 9,
    MDBX_NEXT_MULTIPLE = 10,
    MDBX_NEXT_NODUP = 11,
    MDBX_PREV = 12,
    MDBX_PREV_DUP = 13,
    MDBX_PREV_NODUP = 14,
    MDBX_SET = 15,
    MDBX_SET_KEY = 16,
    MDBX_SET_RANGE = 17,
    MDBX_PREV_MULTIPLE = 18,
    MDBX_SET_LOWERBOUND = 19,
}
pub const MDBX_SUCCESS: MDBX_error_t = 0;
pub const MDBX_RESULT_FALSE: MDBX_error_t = 0;
pub const MDBX_RESULT_TRUE: MDBX_error_t = -1;
pub const MDBX_KEYEXIST: MDBX_error_t = -30799;
pub const MDBX_FIRST_LMDB_ERRCODE: MDBX_error_t = -30799;
pub const MDBX_NOTFOUND: MDBX_error_t = -30798;
pub const MDBX_PAGE_NOTFOUND: MDBX_error_t = -30797;
pub const MDBX_CORRUPTED: MDBX_error_t = -30796;
pub const MDBX_PANIC: MDBX_error_t = -30795;
pub const MDBX_VERSION_MISMATCH: MDBX_error_t = -30794;
pub const MDBX_INVALID: MDBX_error_t = -30793;
pub const MDBX_MAP_FULL: MDBX_error_t = -30792;
pub const MDBX_DBS_FULL: MDBX_error_t = -30791;
pub const MDBX_READERS_FULL: MDBX_error_t = -30790;
pub const MDBX_TXN_FULL: MDBX_error_t = -30788;
pub const MDBX_CURSOR_FULL: MDBX_error_t = -30787;
pub const MDBX_PAGE_FULL: MDBX_error_t = -30786;
pub const MDBX_UNABLE_EXTEND_MAPSIZE: MDBX_error_t = -30785;
pub const MDBX_INCOMPATIBLE: MDBX_error_t = -30784;
pub const MDBX_BAD_RSLOT: MDBX_error_t = -30783;
pub const MDBX_BAD_TXN: MDBX_error_t = -30782;
pub const MDBX_BAD_VALSIZE: MDBX_error_t = -30781;
pub const MDBX_BAD_DBI: MDBX_error_t = -30780;
pub const MDBX_PROBLEM: MDBX_error_t = -30779;
pub const MDBX_LAST_LMDB_ERRCODE: MDBX_error_t = -30779;
pub const MDBX_BUSY: MDBX_error_t = -30778;
pub const MDBX_FIRST_ADDED_ERRCODE: MDBX_error_t = -30778;
pub const MDBX_EMULTIVAL: MDBX_error_t = -30421;
pub const MDBX_EBADSIGN: MDBX_error_t = -30420;
pub const MDBX_WANNA_RECOVERY: MDBX_error_t = -30419;
pub const MDBX_EKEYMISMATCH: MDBX_error_t = -30418;
pub const MDBX_TOO_LARGE: MDBX_error_t = -30417;
pub const MDBX_THREAD_MISMATCH: MDBX_error_t = -30416;
pub const MDBX_TXN_OVERLAPPING: MDBX_error_t = -30415;
pub const MDBX_LAST_ADDED_ERRCODE: MDBX_error_t = -30415;
pub const MDBX_ENODATA: MDBX_error_t = 96;
pub const MDBX_EINVAL: MDBX_error_t = 22;
pub const MDBX_EACCESS: MDBX_error_t = 13;
pub const MDBX_ENOMEM: MDBX_error_t = 12;
pub const MDBX_EROFS: MDBX_error_t = 30;
pub const MDBX_ENOSYS: MDBX_error_t = 78;
pub const MDBX_EIO: MDBX_error_t = 5;
pub const MDBX_EPERM: MDBX_error_t = 1;
pub const MDBX_EINTR: MDBX_error_t = 4;
pub const MDBX_ENOFILE: MDBX_error_t = 2;
pub const MDBX_EREMOTE: MDBX_error_t = 15;
pub type MDBX_error_t = ::libc::c_int;
extern "C" {
    pub fn mdbx_strerror(errnum: ::libc::c_int) -> *const ::libc::c_char;
}
extern "C" {
    pub fn mdbx_strerror_r(
        errnum: ::libc::c_int,
        buf: *mut ::libc::c_char,
        buflen: usize,
    ) -> *const ::libc::c_char;
}
extern "C" {
    pub fn mdbx_liberr2str(errnum: ::libc::c_int) -> *const ::libc::c_char;
}
extern "C" {
    pub fn mdbx_env_create(penv: *mut *mut MDBX_env) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_env_open(
        env: *mut MDBX_env,
        pathname: *const ::libc::c_char,
        flags: MDBX_env_flags_t,
        mode: mdbx_mode_t,
    ) -> ::libc::c_int;
}
pub const MDBX_ENV_JUST_DELETE: MDBX_env_delete_mode_t = 0;
pub const MDBX_ENV_ENSURE_UNUSED: MDBX_env_delete_mode_t = 1;
pub const MDBX_ENV_WAIT_FOR_UNUSED: MDBX_env_delete_mode_t = 2;
pub type MDBX_env_delete_mode_t = ::libc::c_uint;
extern "C" {
    pub fn mdbx_env_delete(
        pathname: *const ::libc::c_char,
        mode: MDBX_env_delete_mode_t,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_env_copy(
        env: *mut MDBX_env,
        dest: *const ::libc::c_char,
        flags: MDBX_copy_flags_t,
    ) -> ::libc::c_int;
}
extern "C" {
    pub fn mdbx_env_copy2fd(
        env: *mut MDBX_env,
        fd: mdbx_filehandle_t,
        flags: MDBX_copy_flags_t,
    ) -> ::libc::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MDBX_stat {
    pub ms_psize: u32,
    pub ms_depth: u32,
    pub ms_branch_pages: u64,
    pub ms_leaf_pages: u64,
    pub ms_overflow_pages: u64,
    pub ms_entries: u64,
    pub ms_mod_txnid: u64,
}
extern "C" {
    pub fn mdbx_env_stat_ex(
        env: *const MDBX_env,
        txn: *const MDBX_txn,
        stat: *mut MDBX_stat,
        bytes: usize,
    ) -> ::libc::c_int;
}
